--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -152,10 +152,10 @@
               <a href="#faq-section">FAQ</a>
             </li>
             <li>
-              <a href="privacy.html" data-root-href="privacy.html">Privacy Policy</a>
+              <a href="privacy.html" data-root-href="/privacy-policy">Privacy Policy</a>
             </li>
             <li>
-              <a href="terms.html" data-root-href="terms.html">Terms</a>
+              <a href="terms.html" data-root-href="/terms-of-service">Terms</a>
             </li>
           </ul>
         </div>
