--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -155,7 +155,7 @@
               <a href="/privacy-policy" data-root-href="/privacy-policy">Privacy Policy</a>
             </li>
             <li>
-              <a href="/terms-of-service" data-root-href="/terms-of-service">Terms</a>
+              <a href="/terms-of-service" data-root-href="/terms-of-service">Terms of Service</a>
             </li>
           </ul>
         </div>
